# asciiformer2

./: .gitignore  Cargo.toml  README.md  game_log.txt  map1.txt
old/: consts.rs  genindex.rs  main.rs  map.rs  renderer.rs  textures.rs  vectors.rs
old/entities/: directions.rs  entity.rs  linedraw.rs  mod.rs  player.rs  wall.rs
src/: consts.rs  debug.rs  entities.rs  game.rs  genindex.rs  helpers.rs  io.rs  linedraw.rs  main.rs  map.rs  renderer.rs  textures.rs  utils.rs  vectors.rs  window.rs
src/components/: collision.rs  color.rs  friction.rs  gravity.rs  keyboard.rs  maxjump.rs  mod.rs  position.rs  speed.rs  texture.rs  velocity.rs
src/entities/: bullet.rs  directions.rs  entity.rs  linedraw.rs  mod.rs  player.rs  wall.rs
src/resources/: map.rs  mod.rs
src/systems/: collision.rs  keyboard.rs  mod.rs  physics.rs  renderer.rs
