[package]
name = "asciiformer2"
version = "0.1.0"
authors = ["isaaclo123 <isaaclo123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vector2math = "0.10.5"
termion = "1.5.5"
lazy_static = "1.4.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
